k8s/app/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: app
  name: app
  namespace: kmotion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      name: app
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: app
        image: ghcr.io/thomas-gleizes/kmotion:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
