k8s/app/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: kmotion
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt-prod
#    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kmotion.thomasgleizes.fr
      secretName: kmotion-tls
  rules:
    - host: kmotion.thomasgleizes.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
